addition and update on my GET, POST, PUT and DELETE
