# controllers/users.js
@@ -24,16 +24,17 @@ const getSingle = async (req, res) => {
 const createUser = async (req, res) => {
 //#swagger.tags=['Users']
     const user = {
+        firstName: req.body.firstName,
+        lastName: req.body.lastName,
         email: req.body.email,
-        username: req.body.username,
-        name: req.body.name,
-        ipaddress: req.body.ipaddress
+        favoriteColor: req.body.favoriteColor,
+        birthday: req.body.birthday
     };
     const result = await mongodb.getDatabase().db().collection('users').insertOne(user);
-    if (response.acknowledged) {
+    if (result.acknowledged) {
         res.status(204).send();
     } else {
-        res.status(500).json(response.error || 'Some error occurred while creating the user.');
+        res.status(500).json(result.error || 'Some error occurred while creating the user.');
     }
 };
 
@@ -41,33 +42,28 @@ const updateUser = async (req, res) => {
 //#swagger.tags=['Users']
     const userId = new ObjectId(req.params.id);
     const user = {
+        firstName: req.body.firstName,
+        lastName: req.body.lastName,
         email: req.body.email,
-        username: req.body.username,
-        name: req.body.name,
-        ipaddress: req.body.ipaddress
+        favoriteColor: req.body.favoriteColor,
+        birthday: req.body.birthday
     };
     const result = await mongodb.getDatabase().db().collection('users').replaceOne({ _id: userId }, user);
-    if (response.modifiedCount > 0) {
+    if (result.modifiedCount > 0) {
         res.status(204).send();
     } else {
-        res.status(500).json(response.error || 'Some error occurred while updating the user.');
+        res.status(500).json(result.error || 'Some error occurred while updating the user.');
     }
 };
 
 const deleteUser = async (req, res) => {
 //#swagger.tags=['Users']
     const userId = new ObjectId(req.params.id);
-    const user = {
-        email: req.body.email,
-        username: req.body.username,
-        name: req.body.name,
-        ipaddress: req.body.ipaddress
-    };
     const result = await mongodb.getDatabase().db().collection('users').deleteOne({ _id: userId });
-    if (response.deletedCount > 0) {
+    if (result.deletedCount > 0) {
         res.status(204).send();
     } else {
-        res.status(500).json(response.error || 'Some error occurred while deleting the user.');
+        res.status(500).json(result.error || 'Some error occurred while deleting the user.');
     }
 };
 
